# libfirfuorida

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
.obs/: workflows.yml
.reuse/: dep5
Firfuorida/: CMakeLists.txt  Column  Error  Migration  Migrator  Table  column.cpp  column.h  column_p.h  error.cpp  error.h  error_p.h  firfuorida_global.h  logging.h  migration.cpp  migration.h  migration_p.h  migrator.cpp  migrator.h  migrator_p.h  table.cpp  table.h  table_p.h
cmake/modules/: Firfuorida-config-version.cmake.in  Firfuorida-config.cmake.in
cmd/: CMakeLists.txt  main.cpp
dox/: DoxygenLayout.xml
dox/examples/: examplemigration.cpp  examplemigration.h  examplemigratormain.cpp
tests/: CMakeLists.txt  migrationtestobject.cpp  migrationtestobject.h  testerrorobject.cpp  testmigration.cpp  testmigrations.cpp  testmigrations.h  testmysqlmigrations.cpp  testsqlitemigrations.cpp
tests/migrations/: m20220119t181049_tiny.cpp  m20220119t181049_tiny.h  m20220119t181249_small.cpp  m20220119t181249_small.h  m20220119t181401_medium.cpp  m20220119t181401_medium.h  m20220119t181501_big.cpp  m20220119t181501_big.h  m20220120t145652_tests1.cpp  m20220120t145652_tests1.h  m20220121t083111_defaults.cpp  m20220121t083111_defaults.h  m20220129t115726_foreignkey1.cpp  m20220129t115726_foreignkey1.h  m20220129t115731_foreignkey2.cpp  m20220129t115731_foreignkey2.h  m20220218t084654_drop_column.cpp  m20220218t084654_drop_column.h
